# cras-sapien

./: .env  .gitignore  README.md  app.py  automata.yaml  config.py  docker_executor.py  files_util.py  generic_socket.py  graph_data.py  handler.py  in_memory_graph_data.py  js_handler.py  native_handler.py  parameter-map.json  py_handler.py  pyproject.toml  requirements.txt  run.sh  sapient.py  sapient_langchain_openai.py  venv-location
automata/: automata.py  automata_config.py
