[project]
name = "cras-sapien"
version = "0.1.0"
description = "Zip Ties[.ai]"
authors = [
    {name = "Rich Siomporas", email = "richard.siomporas@gmail.com"},
]
dependencies = [
    "argparse==1.4.0",
    "langchain-community==0.3.2",
    "langchain-core==0.3.11",
    "langchain-openai==0.2.2",
    "python-dotenv>=0.21.0",
    "deepmerge==2.0",
    "wheel>=0.44.0",
    "stpyv8==13.0.245.16",
    "oyaml==1.0",
    "datamodel-code-generator==0.26.2",
    "networkx==3.4.2",
    "RestrictedPython==7.4",
    "orjson<4,>=3.10",
    "docker==7.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
